--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@babel/core": "^7.24.4",
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.24.1",
-    "@rollup/plugin-babel": "^6.0.4"
+    "@rollup/plugin-babel": "^6.0.4",
+    "babel-loader": "^9.1.3",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
